--- a/residencial-api/deployment.yaml
+++ b/residencial-api/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: residencial-api
-          image: thiagoholder/residentloan:latest
+          image: tomorrow.azurecr.io/residentloan:latest
           ports:
-            - containerPort: 80
+            - containerPort: 5656
